@@ -8,6 +8,7 @@ EXTRA_DIST =       \
 	README.md  \
 	$(NULL)
 CLEANFILES =
+MAINTAINERCLEANFILES =
 SUFFIXES =
 
 bin_SCRIPTS =
