@@ -1,2 +1,4 @@
-NEW in 0 (Not released yet)
+NEW in 1 (2016/02/07)
 =============
+
+Initial release.
